--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.0.3",
     "fast-sort": "^3.4.0",
     "next": "14.0.3",
+    "next-cloudinary": "^5.7.0",
     "postcss": "8.4.31",
     "prisma": "^5.6.0",
     "react": "18.2.0",
